Akismet 1.1.0-pl
---------------------------------
Released on ...

- Fix honeypot implementation. [#2]
- Fix errors not being logged correctly from within the snippet.
- Add support for compound fields [#4]
- Automatically remove records after a specified time period [#5]
- Refactor Akismet class to allow for compatibility with snippets/scripts [#7]
- Make Akismet compatible with Quip. Needs to be a postHook on the QuipReply snippet. [#6]

Akismet 1.0.1-pl
---------------------------------
Released on 2021-09-08

- Support proxied IP addresses with X-Forwarded-For header [#3]
- Fix database schema not allowing for IPv6 addresses

Akismet 1.0.0-pl
---------------------------------
Released on 2021-09-07

- First release